# Skillbox-Django

Auth/mysite/myauth/: urls.py  views.py
Auth/mysite/mysite/: settings.py
CBV/mysite/shopapp/: forms.py  urls.py  views.py
DRF/mysite/: requirements.txt
DRF/mysite/myapiapp/: urls.py  views.py
DRF/mysite/mysite/: settings.py  urls.py
DRF/mysite/shopapp/: serializers.py  urls.py  views.py
Django_Cache/mysite/myauth/: views.py
Django_Cache/mysite/mysite/: settings.py
Django_Cache/mysite/shopapp/: urls.py  views.py
Docs/: requirements.txt
Docs/mysite/mysite/: settings.py  urls.py
Docs/mysite/shopapp/: models.py  views.py
Files/: requirements.txt
Files/mysite/myauth/: forms.py  models.py  urls.py  views.py
Files/mysite/mysite/: urls.py
Files/mysite/shopapp/: forms.py  models.py  views.py
Forms/mysite/requestdataapp/: forms.py  views.py
Forms/mysite/shopapp/: forms.py  views.py
M_02_DjangoIntro/mysite/: db.sqlite34
M_02_DjangoIntro/mysite/mysite/: settings.py
M_02_DjangoIntro/mysite/shopapp/: urls.py  views.py
M_03_DatabaseAndModels/mysite/mysite/: settings.py  urls.py
M_03_DatabaseAndModels/mysite/shopapp/: models.py  urls.py  views.py
M_04_DjangoAdmin/mysite/mysite/: settings.py
M_04_DjangoAdmin/mysite/shopapp/: admin.py  models.py  (+3 more)
import_export/: devices.csv  zakazy.csv
logging/: .dockerignore  demo.py  docker-compose.yaml  requirements.txt
logging/mysite/: log.txt  log.txt.1  log.txt.2  log.txt.3
prod/: Dockerfile  docker-compose.yaml  pyproject.toml
prod/mysite/mysite/: settings.py
queries/mysite/: quieries.sql
(+118 files in other folders)
